# tlmCleaner

./: CHANGELOG.md  README.md  pyproject.toml
src/tlmCleaner/: __init__.py  __main__.py  configure.py
